i18n/ja/docusaurus-plugin-content-docs/version-0.1.0/operations/remote.md
---
sidebar_position: 4
---

# リモート操作

複数のリモートと高度なオプションをサポートし、変更をプッシュおよびプルします。

## キーバインド

| キー | アクション |
| :--- | :--- |
| `p` | プッシュ |
| `P` | プル |

## ワークフロー

### 変更のプッシュ

1.  **トリガー**: `p` を押します。
2.  **ロジックフロー**:
    - **リモートの確認**: Gittiは設定されたリモートを確認します。
    - **シナリオ A (リモートなし)**:
        - **ポップアップ**: "Add Remote"（リモートの追加）。プッシュする前にリモートを追加する必要があります。
    - **シナリオ B (複数のリモート)**:
        - **ポップアップ**: "Choose Remote"（リモートの選択）。プッシュ先のリモート（例：`origin`, `upstream`）を選択します。
        - **次へ**: プッシュオプションに進みます。
    - **シナリオ C (単一のリモート)**:
        - **次へ**: 直接プッシュオプションに進みます。
3.  **プッシュオプション**: プッシュモードを選択するポップアップが表示されます：
    - `git push`
    - `git push --force`
    - `git push --force-with-lease`
4.  **確認**: オプションを選択し、`enter` を押します。

### 変更のプル

1.  **トリガー**: `P` (shift+p) を押します。
2.  **ロジックフロー**:
    - **リモートの確認**: プッシュと同様に、既存のリモートを確認します。
3.  **プルオプション**: プルモードを選択するポップアップが表示されます：
    - `git pull` (マージ)
    - `git pull --rebase`
    - `git pull --no-rebase`
4.  **確認**: オプションを選択し、`enter` を押します。
