i18n/ja/docusaurus-plugin-content-docs/version-0.5.x/operations/remote.md
---
sidebar_position: 3
---

# リモート操作

複数のリモートと高度なオプションをサポートし、変更をプッシュおよびプルします。

## キーバインド

| キー    | アクション                         | 備考                                  |
| :------ | :--------------------------------- | :------------------------------------ |
| `p`     | プッシュ                           | \* グローバル（ポップアップ非表示時） |
| `P`     | プル                               | \* グローバル（ポップアップ非表示時） |
| `< / >` | コンポーネントパネルの切り替え     |                                       |
| `n`     | 新しいリモート                     |                                       |
| `d`     | リモートを削除                     |                                       |
| `e`     | リモートを編集                     |                                       |
| `enter` | トラッキングアップストリームに設定 |                                       |
| `?`     | キーバインディングと手順           |                                       |

:::info
ローカルブランチ、タグ、リモートパネルは同じスペースを共有しています。`< / >` を使用して切り替えます。
:::

## ワークフロー

### リモートの追加

1.  **移動**: リモートコンポーネント（`1`を押す）に移動するか、リモートコンポーネントに切り替えます（`< / >`を押す）。
2.  **トリガー**: `n` を押します。
3.  **名前の入力**: リモート名（例：'origin'）を入力します。
4.  **次へ**: `tab` を押して URL フィールドに移動します。
5.  **URLの入力**: リモート URL を入力します（例：`https://example.com/repo.git` または `git@example.com:repo.git`）。
6.  **確認**: `enter` を押します。
7.  **閉じる**: `esc` を押して出力を閉じます。

---

### リモートの編集

1.  **移動**: リモートコンポーネント（`1`を押す）に移動するか、リモートコンポーネントに切り替えます（`< / >`を押す）。
2.  **選択**: `↑/↓` を使用して編集するリモートを選択します。
3.  **トリガー**: `e` を押します。
4.  **編集**: 新しいリモート名、URL、またはその両方を入力します。
5.  **確認**: `enter` を押します。
6.  **閉じる**: `esc` を押して出力を閉じます。

---

### リモートの削除

1.  **移動**: リモートコンポーネント（`1`を押す）に移動するか、リモートコンポーネントに切り替えます（`< / >`を押す）。
2.  **選択**: `↑/↓` を使用して削除するリモートを選択します。
3.  **トリガー**: `d` を押します。
4.  **確認**: `enter` を押します。
5.  **閉じる**: `esc` を押して出力を閉じます。

---

### トラッキングアップストリームの設定

1.  **移動**: リモートコンポーネント（`1`を押す）に移動するか、リモートコンポーネントに切り替えます（`< / >`を押す）。
2.  **選択**: `↑/↓` を使用してトラッキングアップストリームとして設定するリモートを選択します。
3.  **トリガー**: `enter` を押します。

---

### 変更のプッシュ

1.  **トリガー**: `p` を押します。
2.  **ロジックフロー**:
    - **リモートの確認**: Gittiは設定されたリモートを確認します。
    - **シナリオ A (リモートなし)**:
      - **ポップアップ**: "Add Remote"（リモートの追加）。プッシュする前にリモートを追加する必要があります。
    - **シナリオ B (複数のリモート)**:
      - **ポップアップ**: "Choose Remote"（リモートの選択）。プッシュ先のリモート（例：`origin`, `upstream`）を選択します。
      - **次へ**: プッシュオプションに進みます。
    - **シナリオ C (単一のリモート)**:
      - **次へ**: 直接プッシュオプションに進みます。
3.  **プッシュオプション**: プッシュモードを選択するポップアップが表示されます：
    - `git push`
    - `git push --force`
    - `git push --force-with-lease`
4.  **確認**: オプションを選択し、`enter` を押します。

---

### 変更のプル

1.  **トリガー**: `P` (shift+p) を押します。
2.  **ロジックフロー**:
    - **リモートの確認**: プッシュと同様に、既存のリモートを確認します。
3.  **プルオプション**: プルモードを選択するポップアップが表示されます：
    - `git pull` (ユーザー設定に基づく)
    - `git pull --rebase`
    - `git pull --no-rebase`
4.  **確認**: オプションを選択し、`enter` を押します。

:::note
リベースおよびマージオプションは、現在のブランチの独自のアップストリームからプルします。他のリモートやブランチとのリベースまたはマージのサポートは、今後のバージョンで利用可能になります。
:::
